Partial fix for Safari grid sizing
No-longer smoothly vertical resize on any browser, but Safari looks like
the rest at "normal" scales. Safari still differs when there is a lack of
vertical space by showing a scrollbar, whereas other browsers overlap
the rows. Neither is ideal, but this is better than not working at all on
Safari.

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
   grid-template-columns: 1fr 1fr;
   gap: var(--margin);
   width: fit-content;
+  height: fit-content;
   max-width: 1200px;
   max-height: 95vh;
   margin: 0 auto;
@@ -59,6 +60,10 @@ body {
   min-height: 0;
   align-items: center;
   justify-items: center;
+  width: fit-content;
+  height: fit-content;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .row:first-child > :first-child {
@@ -73,6 +78,7 @@ body {
   grid-column: span 2;
   justify-self: stretch;
   min-width: 0;
+  width: 100%;
 }
 
 .square {
@@ -89,6 +95,8 @@ body {
   border: 4px solid var(--border-colour);
   border-radius: 12px;
   box-sizing: border-box;
+  width: fit-content;
+  height: auto;
 }
 
 .buttons-container {
